[gd_scene load_steps=2 format=3 uid="uid://dl1iscs6yy1yo"]

[ext_resource type="Script" path="res://control.gd" id="1_yiriq"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yiriq")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -112.0
offset_top = 148.0
offset_right = 134.0
offset_bottom = 218.0
grow_horizontal = 2
theme_override_font_sizes/normal_font_size = 35
text = "COOL GAME"

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 939.0
offset_top = 243.0
offset_right = 1133.0
offset_bottom = 306.0
text = "Play"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 940.0
offset_top = 326.0
offset_right = 1134.0
offset_bottom = 389.0
text = "Option"

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 931.0
offset_top = 415.0
offset_right = 1125.0
offset_bottom = 478.0
text = "Extras"

[node name="Button4" type="Button" parent="."]
layout_mode = 0
offset_left = 933.0
offset_top = 504.0
offset_right = 1127.0
offset_bottom = 567.0
text = "Quit"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_button_4_pressed"]
